# aiger-rs

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/arithmetic/: adder.aag  bar.aag  log2.aag  max.aag  multiplier.aag  sin.aag  sqrt.aag  square.aag
src/: aig.rs  aiger.rs  cnf.rs  lib.rs  node.rs  parse.rs  parser.rs  reference.rs  toposort.rs  utils.rs  write.rs
src/python/: aig.rs  mod.rs
tests/: test_examples.rs
