[package]
name = "aigerox"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
description = "A Rust library for working with AIGs (And-Inverted Graphs) and AIGER files."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
python = ["pyo3"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4"
eyre = "0.6"
pyo3 = { version = "0.24", optional = true, features = ["extension-module", "eyre"] }
